<resources>
    <string name="app_name">SocialApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn_text">Войти</string>
    <string name="password_text">Пароль</string>
    <string name="email_text">Email</string>
    <string name="app_name_text">Intraverse</string>
    <string name="login_screen_app_description">Some description which i not passed</string>
    <string name="restore_password_text">Восстановить пароль</string>
    <string name="sign_up_text">Зарегистрироваться</string>

    <!--  Error strings  -->
    <string name="ktor_connection_timeout">Не удалось подключиться к серверу, зайдите чуть позже</string>
    <string name="ktor_connection_exception">Кажется у нас нет интернета…</string>
    <string name="login_fail_message_title">Не удалось войти</string>
    <string name="login_close_alert_btn_text">Закрыть</string>
    <string name="next">Далее</string>
    <string name="signup_page_base_title">Как тебя зовут?</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="city">Город</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повтороте пароль</string>
    <string name="age">Возраст</string>
    <string name="enter_email_text">Введи свой Email</string>
    <string name="email_already_exists">Пользователь с таким email уже зарегистрирован</string>

    <string name="repeat_password_error_message">Пароли должны быть одинаковыми</string>
    <string name="main">Главная</string>
    <string name="profile">Профиль</string>
    <string name="messages">Сообщения</string>
    <string name="groups">Сообщества</string>
    <string name="logout">Выйти</string>

</resources>