<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.unauthorized.pages.SignUpSecurityPageFragment"
    android:padding="12dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/email_enter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_text"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            app:boxBackgroundColor="@color/edit_text_bg_color"
            app:boxStrokeColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/email_enter_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>



    <com.bgrebennikovv.github.inui.DefaultStateButton.DefaultStateButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        app:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="bottom"
        />

</androidx.constraintlayout.widget.ConstraintLayout>